# wagtail-modeltranslation

./: pyproject.toml
wagtail_modeltranslation/: patch_wagtailadmin.py
wagtail_modeltranslation/static/wagtail_modeltranslation/css/: admin_patch.css
wagtail_modeltranslation/static/wagtail_modeltranslation/js/: copy_stream_fields.js  language_toggles.js
